2005-05-09  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus/seahorse-tool-files.c: Fix problem with 
    not resolving relative file names properly.
    * plugins/nautilus/seahorse-tool-progress.c: Fix problem with 
    not starting the progress window process.
    * plugins/nautilus/seahorse-tool.c: Don't offer to package
    files when signing.
    
2006-05-12  Adam Schreiber  <sadam@clemson.edu>

    * data/seahorse.schemas.in:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * src/Makefile.am:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-keyserver-sync.h(added): Added auto sync ability
    (Bug #335418)
    * libseahorse/seahorse-pgp-key-op.c: Changed error msg to use 
    unsigned int instead of int.

2006-05-09  Nate Nielsen  <nielsen@memberwebs.com>

    * AUTHORS:
    * daemon/Makefile.am:
    * daemon/seahorse-daemon.1 (added):
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus/seahorse-tool.1 (added): Manual pages
    Written by Michael Mende. 

2006-05-09  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/eggtrayicon.c: Patch to implement transparency 
    for notification area icons (Peter Grundström). (Bug #341171, 
    #150726)
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * daemon/seahorse-sharing.c:
    * agent/seahorse-agent-status.c: Fix the placement of popup
    menus.

2006-05-06  Adam Schreiber  <sadam@clemson.edu>

    * Makefile.am:
    * plugins/applet/seahorse-applet.c: Migrated encryption
    ops to use libcryptui and DBUS interfaces.

2006-05-03  Adam Schreiber  <sadam@clemson.edu>

    * plugins/nautilus/seahorse.mime:
    * plugins/nautilus/seahorse.xml: Added missing extensions
    to mime types.
    
2006-05-01  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: