@@ -6,6 +6,8 @@
     not starting the progress window process.
     * plugins/nautilus/seahorse-tool.c: Don't offer to package
     files when signing.
+    * plugins/nautilus/seahorse-tool-files.c: Cancel properly when 
+    multiple files are being operated on.
     
 2006-05-12  Adam Schreiber  <sadam@clemson.edu>
 
